# web_scraper

./: .env.example  Dockerfile  README.md  blocked_sites.txt  description.json  docker-compose.yml  ignored_ext.txt  pyproject.toml
app/: main.py  schemas.py
db/: config.py  crud.py  models.py  session.py
service/: main.py  test.py
